# ExEngine---C-GameEngine

./: LICENSE
ExEngine-Source/: CMakeLists.txt  main.cpp
ExEngine-Source/Code/: CMakeLists.txt
ExEngine-Source/Code/Editor/: CMakeLists.txt
ExEngine-Source/Code/Engine/: CMakeLists.txt
ExEngine-Source/Code/Engine/Core/: Engine.cpp  Engine.h  EngineStartup.cpp  EngineStartup.h
ExEngine-Source/Code/Engine/Core/ECS/: Registry.h
ExEngine-Source/Code/Engine/Core/ECS/Components/: Component.h
ExEngine-Source/Code/Engine/Core/ECS/Entity/: Entity.h
ExEngine-Source/Code/Engine/Core/Runtime/: Gameloop.cpp  Gameloop.h
ExEngine-Source/Code/Engine/Core/Runtime/Settings/: RuntimeSettings.cpp  RuntimeSettings.h
ExEngine-Source/Code/Engine/Core/Runtime/Time/: Time.cpp  Time.h
